--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <div class="wrap">
         <h1>young's page</h1>
     </div>
+    <div>
+        <a href="Kakao/index.html">Kakao</a>
+        <a href="Jennifer/index">Jennifer Soft</a>
+    </div>
 </body>
 </html>
