홈페이지 다시수정
홈페이지 다시 수정했다.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div>
         <a href="Kakao/index.html">Kakao</a>
-        <a href="Jennifer/index">Jennifer Soft</a>
+        <a href="jenniferSoft/index.html">Jennifer Soft</a>
     </div>
 </body>
 </html>
