--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>young's page</title>
+
+    <style>
+    a{text-decoration: none; color: black;}
+    </style>
 </head>
 <body>
     <div class="wrap">
         <h1>young's page</h1>
     </div>
     <div>
-        <a href="Kakao/index.html">Kakao</a>
-        <a href="jenniferSoft/index.html">Jennifer Soft</a>
+        <a href="https://gay0ung.github.io/Kakao/index.html">Kakao</a>
+        <a href="https://gay0ung.github.io/jenniferSoft/index.html">Jennifer Soft</a>
     </div>
 </body>
 </html>
