--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>young's page</h1>
     </div>
     <div>
-        <a href="https://gay0ung.github.io/Kakao/index.html">Kakao</a>
+        <a href="Kakao/index.html">Kakao</a>
         <a href="https://gay0ung.github.io/jenniferSoft/index.html">Jennifer Soft</a>
     </div>
 </body>
