--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>young's page</title>
 
     <style>
-    a{text-decoration: none; color: black;}
+    a {text-decoration: none; color: black;}
     </style>
 </head>
 <body>
@@ -15,8 +15,8 @@
         <h1>young's page</h1>
     </div>
     <div>
-        <a href="https://gay0ung.github.io/kakao/index.html">Kakao</a>
-        <a href="https://gay0ung.github.io/jenniferSoft/index.html">Jennifer Soft</a>
+        <a href="kakao/index.html">Kakao</a>
+        <a href="jenniferSoft/index.html">Jennifer Soft</a>
     </div>
 </body>
 </html>
