--- a/kakao/index.html
+++ b/kakao/index.html
@@ -7,7 +7,7 @@
     <title>gayoung_P1:kakao</title>
     <link rel="stylesheet" media="all" type="text/css" href="css/common.css" />
 <!-- script -->
-    <script type="text/javascript" src="../p1_kakao/js/kakao_main_js.js"></script>
+    <script type="text/javascript" src="../kakao/js/kakao_main_js.js"></script>
 <!-- slide -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -17,9 +17,9 @@
     <div class="kakao_wrap">
         <header>
             <div class="header_inner" >
-                <h1 class="logo"><a href=""><img src="images/logo_kakao.png" alt="kakao"></a></h1>
-                <h1 class="logo" style="display: none;"><a href=""><img src="images/logo_kakao_white.png" alt="kakao"></a></h1>
-                <nav class="head_nav ">
+                <h1 class="logo"><a href=""></a></h1>
+                <nav class="head_nav ">  
+                    <!-- class wh를 준다 (자바스크립트를 작동할때) -->
                     <ul class="clear">
                         <li>
                             <a href="">카카오</a>
