--- a/jenniferSoft/index.html
+++ b/jenniferSoft/index.html
@@ -316,7 +316,7 @@
 					<div class="box_main_type">
 						<button class="license">
 							카테고리를 선택해 주세요.
-							<div class="license_option active" sty>
+							<div class="license_option" sty>
 									<a href="">라이선스 키 신청</a>
 									<a href="">견적 문의</a>
 									<a href="">파트너 관련 문의</a>
