--- a/Microsoft/index.html
+++ b/Microsoft/index.html
@@ -8,6 +8,156 @@
     <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
-    
+    <div class="MS_wrap">
+        <header>
+            <div class="header_inner">
+                <div class="MS_logo"><img src="images/RE1Mu3b.png" alt="microsoft_logo"></div>
+            </div>
+            <nav>
+                <ul class="header_nav">
+                    <li><a href="">Office</a></li>
+                    <li><a href="">Window</a></li>
+                    <li><a href="">Surface</a></li>
+                    <li><a href="">Xbox</a></li>
+                    <li><a href="">지원</a></li>
+                </ul>
+            </nav>
+            <div class="header_action">
+                <div class="action_all">
+                    <ul class="site_map">
+                        <li>
+                            <h3>소프트웨어</h3>
+                            <a href="">
+                                <ul class="site_map_list">
+                                    <li><a href="">Windows용 앱</a></li>
+                                    <li><a href="">One Drive</a></li>
+                                    <li><a href="">Outlook</a></li>
+                                    <li><a href="">Skype</a></li>
+                                    <li><a href="">OneNote</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li>
+                            <h3>PC및 장치</h3>
+                            <a href="">
+                                <ul class="site_map_list">
+                                    <li><a href="">PCs & tablets</a></li>
+                                    <li><a href="">주변 기기</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li>
+                            <h3>엔터테이먼트</h3>
+                            <a href="">
+                                <ul class="site_map_list">
+                                    <li><a href="">Xbox 및 게임</a></li>
+                                    <li><a href="">게임</a></li>
+                                    <li><a href="">Windows 게임</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li>
+                            <h3>기업 고객용</h3>
+                            <a href="">
+                                <ul class="site_map_list">
+                                    <li><a href="">Microsoft Azure</a></li>
+                                    <li><a href="">Microsoft Dynamics 365</a></li>
+                                    <li><a href="">Microsoft 365</a></li>
+                                    <li><a href="">Microsoft Industry</a></li>
+                                    <li><a href="">데이터 플랫폼</a></li>
+                                    <li><a href="">볼륨 라이선싱</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li>
+                            <h3>Developer & IT</h3>
+                            <a href="">
+                                <ul class="site_map_list">
+                                    <li><a href="">.NET</a></li>
+                                    <li><a href="">Visual Studio</a></li>
+                                    <li><a href="">Windows Server</a></li>
+                                    <li><a href="">Windows 앱 개발</a></li>
+                                    <li><a href="">문서</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li>
+                            <h3>기타</h3>
+                            <a href="">
+                                <ul class="site_map_list">
+                                    <li><a href="">Microsoft Store</a></li>
+                                    <li><a href="">무료 다운로드 및 보안</a></li>
+                                    <li><a href="">교육</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li><a href="">사이트맵 보기<span></span></a></li>
+                    </ul>
+                </div>
+                <div class="action search">
+                    <p>검색</p>
+                    <div></div>
+                </div>
+                <div class="action cart">
+                    <p>카트</p>
+                    <div></div>
+                </div>
+                <div class="action cart">
+                    <p>로그인</p>
+                    <div></div>
+                </div>
+            </div>
+        </header>
+        <main>
+            <div class="main_inner">
+                <div class="main_hero visual">
+                    <ul class="visual_photo">
+                        <li><a href=""><img src="" alt=""></a></li>
+                        <li><a href=""><img src="" alt=""></a></li>
+                    </ul>
+                    <div class="visual_contents">
+                        <div>
+                            <h1>새로운 Surface Laptop 3</h1>
+                            <p>완벽한 일상용 노트북이 이제 더욱 빨라졌습니다.</p>
+                            <div class="visual_more">
+                                자세히 보기
+                                <span class="arrow"></span>
+                            </div>
+                        </div>
+                        <div>
+                            <h1>새로운 Surface Pro 7</h1>
+                            <p>초경량의 다재다능함</p>
+                            <div class="visual_more">
+                                자세히 보기
+                                <span class="arrow"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="visual_page">
+                        <button class="page_num"></button>
+                        <button class="page_num"></button>
+                        <button class="page_set"></button>
+                    </div>
+                    <button class="pager prev"></button>
+                    <button class="pager next"></button>
+                </div>
+                <div class="main_contents">
+                    <div>
+                        <div>
+                            <section>
+                                <img src="images/">
+                                <h3></h3>
+                                <p></p>
+                                
+                            </section>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer>
+
+        </footer>
+    </div>
 </body>
 </html>
