--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>young's page</title>
 
     <style>
-    a {text-decoration: none; color: black;}
+    a { color: black; display: block;}
     </style>
 </head>
 <body>
@@ -17,6 +17,7 @@
     <div>
         <a href="kakao/index.html">Kakao</a>
         <a href="jenniferSoft/index.html">Jennifer Soft</a>
+        <a href="Microsoft/index.html">Microsoft</a>
     </div>
 </body>
 </html>
