--- a/Microsoft/index.html
+++ b/Microsoft/index.html
@@ -103,9 +103,9 @@
                     <a href="">카트</a>
                     <span class="cart_photo"></span>
                 </div>
-                <div class="action cart">
+                <div class="action login">
                     <a href="">로그인</a>
-                    <span class="cart_photo"></span>
+                    <span class="login_photo"></span>
                 </div>
             </div>
         </div>
