--- a/Microsoft/index.html
+++ b/Microsoft/index.html
@@ -16,7 +16,7 @@
             <nav class="header_nav">
                 <ul>
                     <li><a href="">Office</a></li>
-                    <li><a href="">Window</a></li>
+                    <li><a href="">Windows</a></li>
                     <li><a href="">Surface</a></li>
                     <li><a href="">Xbox</a></li>
                     <li><a href="">지원</a></li>
