--- a/Microsoft/index.html
+++ b/Microsoft/index.html
@@ -144,16 +144,22 @@
                     </div>
                 </div>
                 <div class="visual_page">
-                    <button class="page_num"><div></div></button>
-                    <button class="page_num"><div></div></button>
-                    <button class="page_set">
-                        <div class="page_set_ play">
-                            <span></span>
-                        </div>
-                        <div class="page_set_ pause" style="display: none;">
-                            <span></span>
-                        </div>
-                    </button>
+                    <div class="visual_page_button clear">
+                        <button class="page_num"><div></div></button>
+                        <button class="page_num"><div></div></button>
+                        <button class="page_set">
+                            <div class="page_set_play">
+                                <span class="_left"></span>
+                                <span class="_bottom"></span>
+                                <span class="_top"></span>
+                            </div>
+                            <div class="page_set_pause">
+                                <span class="pause_left"></span>
+                                <span class="pause_right"></span>
+                            </div>
+                        </button>
+                    </div>
+                    
                 </div>
                 <div class="visual_pager_btn">
                     <button class="pager prev" ><div></div></button>
