--- a/Microsoft/index.html
+++ b/Microsoft/index.html
@@ -173,13 +173,13 @@
                 </div> 
             </div>
         <!-- main_contents -->
-            <div class="main_contents" >
-                <div>
+            <div class="main_contents clear" >
+                <div class="clear">
                     <div class="section_list">
                         <section class="contents_sec">
-                            <img src="images/RWfbJT.webp">
-                            <h3>Surface Book 2</h3>
-                            <p>최상의 노트북에서 경험하는 최고의 성능.</p>
+                            <img src="images/RE3NOmL.webp">
+                            <h3>새로운 Surface Pro 7</h3>
+                            <p>여러분이 아는 Pro 그 이상입니다. 그 어느 때보다도 강력해진 새로운 Surface Pro 7에는 노트북 수준의 Intel® Core™ 프로세서가 탑재되었습니다.</p>
                             <div class="section_btn">
                                 <a href="">
                                     지금 쇼핑하기
@@ -188,18 +188,12 @@
                             </div>
                         </section>
                         <section class="contents_sec">
-                            <img src="images/RE37GsN.webp">
-                            <h3>여러분을 위한 365</h3>
-                            <p>날마다 Office 365로 할 수 있는 일들을 찾아보세요.</p>
+                            <img src="images/RWfbJT.webp">
+                            <h3>Surface Book 2</h3>
+                            <p>최상의 노트북에서 경험하는 최고의 성능.</p>
                             <div class="section_btn">
                                 <a href="">
-                                    최대 6명 사용 가능
-                                    <span></span>
-                                </a>
-                            </div>
-                            <div class="section_btn">
-                                <a href="">
-                                    1명 사용 가능
+                                    지금 쇼핑하기
                                     <span></span>
                                 </a>
                             </div>
@@ -232,22 +226,24 @@
                 </div>
             </div>
         <!-- main_hero store -->
-            <div class="main_hero store" style="display: none;">
-                <div class="store_photo"></div>
+            <div class="main_hero store">
+                <div class="store_photo"><img src="images/RW5kpU.jpeg"></div>
                 <div class="store_contents">
-                    <h1>Microsoft 스토어</h1>
-                    <p>집과 학교, 직장 및 여가 생활에 필요한 제품을 확인 하세요.</p>
-                    <div class="sotre_buy">
-                        구매하기
-                        <span class="arrow"></span>
+                    <div class="store_contents_inner">
+                        <h1>Microsoft 스토어</h1>
+                        <p>집과 학교, 직장 및 여가 생활에 필요한 제품을 확인 하세요.</p>
+                        <div class="sotre_buy_btn clear">
+                            <a href="">구매하기</a>
+                            <span class="arrow"></span>
+                        </div>
                     </div>
                 </div>
             </div>
         <!-- main_contents user -->
-            <div class="main_contents user" style="display: none;"
+            <div class="main_contents user " >
                 <h2>기업 사용자</h2>
-                <div>
-                    <div>
+                <div class="clear">
+                    <div class="section_list">
                         <section class="contents_sec">
                             <img src="images/RE1CmIw.webp">
                             <h3>Window 10 Enterprise</h3>
@@ -271,7 +267,7 @@
                             </div>                               
                         </section>
                     </div>
-                    <div>
+                    <div class="section_list right">
                         <section class="contents_sec">
                             <img src="images/RE3sKm8.webp">
                             <h3>Kubernetes 살펴보기</h3>
@@ -298,115 +294,123 @@
                 </div>
             </div>
         <!-- main_social -->
-            <div class="main_social" style="display: none;">
-                <p>Microsoft 팔로우</p>
-                <ul class="social_btn">
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                </ul>
+            <div class="main_social">
+                <div class="main_social_inner clear">
+                    <p>Microsoft 팔로우</p>
+                    <ul class="social_btn">
+                        <li><a href="" ></a></li>
+                        <li><a href="" ></a></li>
+                    </ul>
+                </div>
+                
             </div>
         </div>
     </main>
 <!-- footer----------------------------------------------- -->
-    <footer style="display: none;">
+    <footer>
         <div class="footer_inner">
             <nav class="footer_nav">
-                <ul class="site_map">
-                    <li>
-                        <h3>새로운 기능</h3>
-                        <a href="">
-                            <ul class="site_map_sub">
-                                <li><a href="">Surface Pro X</a></li>
-                                <li><a href="">Surface Pro 7</a></li>
-                                <li><a href="">Surface Laptop 3</a></li>
-                                <li><a href="">Surface Go</a></li>
-                                <li><a href="">Windows 10 앱(238K)</a></li>
-                                <li><a href="">Office 앱</a></li>
-                            </ul>
-                        </a>
-                    </li>
-                    <li>
-                        <h3>Microsoft Store</h3>
-                        <a href="">
-                            <ul class="site_map_sub">
-                                <li><a href="">계정 프로필</a></li>
-                                <li><a href="">다운로드 센터</a></li>
-                                <li><a href="">Microsoft Store 지원</a></li>
-                                <li><a href="">반품/환불</a></li>
-                                <li><a href="">주문 추적</a></li>
-                            </ul>
-                        </a>
-                    </li>
-                    <li>
-                        <h3>교육</h3>
-                        <a href="">
-                            <ul class="site_map_sub">
-                                <li><a href="">교육 분야의 Microsoft</a></li>
-                                <li><a href="">학생용 Office</a></li>
-                                <li><a href="">학교용 Office 365</a></li>
-                                <li><a href="">학생 및 학부모용 특가 혜택</a></li>
-                                <li><a href="">교육 분야의Microsoft Azure</a></li>
-                            </ul>
-                        </a>
-                    </li>
-                    <li>
-                        <h3>대기업</h3>
-                        <a href="">
-                            <ul class="site_map_sub">
-                                <li><a href="">Azure</a></li>
-                                <li><a href="">AappSourece</a></li>
-                                <li><a href="">자동차</a></li>
-                                <li><a href="">정부 기관</a></li>
-                                <li><a href="">의료 서비스</a></li>
-                                <li><a href="">제조업</a></li>
-                                <li><a href="">금융 서비스</a></li>
-                                <li><a href="">소매</a></li>
-                            </ul>
-                        </a>
-                    </li>
-                    <li>
-                        <h3>개발자</h3>
-                        <a href="">
-                            <ul class="site_map_sub">
-                                <li><a href="">Microsoft Visual Studio</a></li>
-                                <li><a href="">Windows 개발자 센터</a></li>
-                                <li><a href="">개발자 네트워크</a></li>
-                                <li><a href="">TechNet</a></li>
-                                <li><a href="">Microsoft 개발자 프로그램</a></li>
-                                <li><a href="">채널 9</a></li>
-                            </ul>
-                        </a>
-                    </li>
-                    <li>
-                        <h3>회사</h3>
-                        <a href="">
-                            <ul class="site_map_sub">
-                                <li><a href="">채용 정보</a></li>
-                                <li><a href="">Microsoft정보</a></li>
-                                <li><a href="">회사 뉴스</a></li>
-                                <li><a href="">Microsoft 개인 정보 보호</a></li>
-                                <li><a href="">투자자</a></li>
-                                <li><a href="">보안</a></li>
-                            </ul>
-                        </a>
-                    </li>
-                </ul>
+                <div class="footer_nav_inner">
+                    <ul class="site_map">
+                        <li>
+                            <h3>새로운 기능</h3>
+                            <a href="">
+                                <ul class="site_map_sub">
+                                    <li><a href="">Surface Pro X</a></li>
+                                    <li><a href="">Surface Pro 7</a></li>
+                                    <li><a href="">Surface Laptop 3</a></li>
+                                    <li><a href="">Surface Go</a></li>
+                                    <li><a href="">Windows 10 앱(238K)</a></li>
+                                    <li><a href="">Office 앱</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li>
+                            <h3>Microsoft Store</h3>
+                            <a href="">
+                                <ul class="site_map_sub">
+                                    <li><a href="">계정 프로필</a></li>
+                                    <li><a href="">다운로드 센터</a></li>
+                                    <li><a href="">Microsoft Store 지원</a></li>
+                                    <li><a href="">반품/환불</a></li>
+                                    <li><a href="">주문 추적</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li>
+                            <h3>교육</h3>
+                            <a href="">
+                                <ul class="site_map_sub">
+                                    <li><a href="">교육 분야의 Microsoft</a></li>
+                                    <li><a href="">학생용 Office</a></li>
+                                    <li><a href="">학교용 Office 365</a></li>
+                                    <li><a href="">학생 및 학부모용 특가 혜택</a></li>
+                                    <li><a href="">교육 분야의Microsoft Azure</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li>
+                            <h3>대기업</h3>
+                            <a href="">
+                                <ul class="site_map_sub">
+                                    <li><a href="">Azure</a></li>
+                                    <li><a href="">AappSourece</a></li>
+                                    <li><a href="">자동차</a></li>
+                                    <li><a href="">정부 기관</a></li>
+                                    <li><a href="">의료 서비스</a></li>
+                                    <li><a href="">제조업</a></li>
+                                    <li><a href="">금융 서비스</a></li>
+                                    <li><a href="">소매</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li>
+                            <h3>개발자</h3>
+                            <a href="">
+                                <ul class="site_map_sub">
+                                    <li><a href="">Microsoft Visual Studio</a></li>
+                                    <li><a href="">Windows 개발자 센터</a></li>
+                                    <li><a href="">개발자 네트워크</a></li>
+                                    <li><a href="">TechNet</a></li>
+                                    <li><a href="">Microsoft 개발자 프로그램</a></li>
+                                    <li><a href="">채널 9</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li>
+                            <h3>회사</h3>
+                            <a href="">
+                                <ul class="site_map_sub">
+                                    <li><a href="">채용 정보</a></li>
+                                    <li><a href="">Microsoft정보</a></li>
+                                    <li><a href="">회사 뉴스</a></li>
+                                    <li><a href="">Microsoft 개인 정보 보호</a></li>
+                                    <li><a href="">투자자</a></li>
+                                    <li><a href="">보안</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                    </ul>
+                </div class="">
+                
             </nav>
             <div class="footer_etc">
-                <div class="footer_etc_lang">
-                    <a href="">
-                        한국어(대한민국)
-                    </a>
-                </div>
-                <div class="footer_ect_coppyright">
-                    <ul>
-                        <li><a href="">Microsoft에 문의</a></li>
-                        <li><a href="">개인정보처리방침</a></li>
-                        <li><a href="">사용약관</a></li>
-                        <li><a href="">상표</a></li>
-                        <li><a href="">광고정보</a></li>
-                        <li>© Microsoft 2019</li>
-                    </ul>
+                <div class="footer_etc_inner">
+                    <div class="footer_etc_lang">
+                        <a href="">
+                            한국어(대한민국)
+                        </a>
+                    </div>
+                    <div class="footer_ect_coppyright">
+                        <ul>
+                            <li><a href="">Microsoft에 문의</a></li>
+                            <li><a href="">개인정보처리방침</a></li>
+                            <li><a href="">사용약관</a></li>
+                            <li><a href="">상표</a></li>
+                            <li><a href="">광고정보</a></li>
+                            <li>© Microsoft 2019</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
