--- a/Microsoft/index.html
+++ b/Microsoft/index.html
@@ -177,49 +177,56 @@
                 <div class="clear">
                     <div class="section_list">
                         <section class="contents_sec">
-                            <img src="images/RE3NOmL.webp">
-                            <h3>새로운 Surface Pro 7</h3>
-                            <p>여러분이 아는 Pro 그 이상입니다. 그 어느 때보다도 강력해진 새로운 Surface Pro 7에는 노트북 수준의 Intel® Core™ 프로세서가 탑재되었습니다.</p>
-                            <div class="section_btn">
-                                <a href="">
-                                    지금 쇼핑하기
-                                    <span></span>
-                                </a>
+                            <div>
+                                <img src="images/RE3NOmL.webp">
+                                <h3>새로운 Surface Pro 7</h3>
+                                <p>여러분이 아는 Pro 그 이상입니다. 그 어느 때보다도 강력해진 새로운 Surface Pro 7에는 노트북 수준의 Intel® Core™ 프로세서가 탑재되었습니다.</p>
+                                <div class="section_btn">
+                                    <a href="">
+                                        지금 쇼핑하기
+                                        <span></span>
+                                    </a>
+                                </div> 
+                            </div>   
+                        </section>
+                        <section class="contents_sec">
+                            <div>
+                                <img src="images/RWfbJT.webp">
+                                <h3>Surface Book 2</h3>
+                                <p>최상의 노트북에서 경험하는 최고의 성능.</p>
+                                <div class="section_btn">
+                                    <a href="">
+                                        지금 쇼핑하기
+                                        <span></span>
+                                    </a>
+                                </div>
                             </div>
                         </section>
                         <section class="contents_sec">
-                            <img src="images/RWfbJT.webp">
-                            <h3>Surface Book 2</h3>
-                            <p>최상의 노트북에서 경험하는 최고의 성능.</p>
-                            <div class="section_btn">
-                                <a href="">
-                                    지금 쇼핑하기
-                                    <span></span>
-                                </a>
+                            <div>
+                                <img src="images/RE37bh1.webp">
+                                <h3>Xbox Game Pass Ultimate</h3>
+                                <p>Xbox Live Gold와 100개 이상의 고품질 콘솔 및 PC게임. 친구들과 함께 플레이하고 다음에 즐길 게임을 찾아보세요.</p>
+                                <div class="section_btn">
+                                    <a href="">
+                                        지금 구입
+                                        <span></span>
+                                    </a>
+                                </div>
                             </div>
-                        </section>
-                    </div>
-                    <div class="section_list right">
-                        <section class="contents_sec">
-                            <img src="images/RE37bh1.webp">
-                            <h3>Xbox Game Pass Ultimate</h3>
-                            <p>Xbox Live Gold와 100개 이상의 고품질 콘솔 및 PC게임. 친구들과 함께 플레이하고 다음에 즐길 게임을 찾아보세요.</p>
-                            <div class="section_btn">
-                                <a href="">
-                                    지금 구입
-                                    <span></span>
-                                </a>
-                            </div>
+                            
                         </section>
                         <section class="contents_sec ">
-                            <img src="images/RE1uWfh.webp">
-                            <h3>Xbox One S</h3>
-                            <p>최고의 게임 시스템이자 4K 엔터테이먼트 시스템.</p>
-                            <div class="section_btn">
-                                <a href="">
-                                    자세히 보기
-                                    <span></span>
-                                </a>
+                            <div>
+                                <img src="images/RE1uWfh.webp">
+                                <h3>Xbox One S</h3>
+                                <p>최고의 게임 시스템이자 4K 엔터테이먼트 시스템.</p>
+                                <div class="section_btn">
+                                    <a href="">
+                                        자세히 보기
+                                        <span></span>
+                                    </a>
+                                </div>
                             </div>
                         </section>
                     </div>
@@ -245,49 +252,57 @@
                 <div class="clear">
                     <div class="section_list">
                         <section class="contents_sec">
-                            <img src="images/RE1CmIw.webp">
-                            <h3>Window 10 Enterprise</h3>
-                            <p>IT 전문가용 90일 무료 평가판을 다운로드하세요.</p>
-                            <div class="section_btn">
-                                <a href="">
-                                    지금 다운로드
-                                    <span></span>
-                                </a>
+                            <div>
+                                <img src="images/RE1CmIw.webp">
+                                <h3>Window 10 Enterprise</h3>
+                                <p>IT 전문가용 90일 무료 평가판을 다운로드하세요.</p>
+                                <div class="section_btn">
+                                    <a href="">
+                                        지금 다운로드
+                                        <span></span>
+                                    </a>
+                                </div>
                             </div>
                         </section>
                         <section class="contents_sec">
-                            <img src="images/RE2mheW.webp">
-                            <h3>비지니스용 Office 365</h3>
-                            <p>온라인, 오프라인에 상관없이 어디서나 파일에 액세스하세요.</p>
-                            <div class="section_btn">
-                                <a href="">
-                                    지금 쇼핑하기
-                                    <span></span>
-                                </a>
-                            </div>                               
+                            <div>
+                                <img src="images/RE2mheW.webp">
+                                <h3>비지니스용 Office 365</h3>
+                                <p>온라인, 오프라인에 상관없이 어디서나 파일에 액세스하세요.</p>
+                                <div class="section_btn">
+                                    <a href="">
+                                        지금 쇼핑하기
+                                        <span></span>
+                                    </a>
+                                </div>
+                            </div>
                         </section>
                     </div>
                     <div class="section_list right">
                         <section class="contents_sec">
-                            <img src="images/RE3sKm8.webp">
-                            <h3>Kubernetes 살펴보기</h3>
-                            <p>Kubernetes가 어떻게 작동하는지 알아보고 클라우드 네이티브 앱 개발을 바로 시작하세요.</p>
-                            <div class="section_btn">
-                                <a href="">
-                                    시작하기
-                                    <span></span>
-                                </a>
+                            <div>
+                                <img src="images/RE3sKm8.webp">
+                                <h3>Kubernetes 살펴보기</h3>
+                                <p>Kubernetes가 어떻게 작동하는지 알아보고 클라우드 네이티브 앱 개발을 바로 시작하세요.</p>
+                                <div class="section_btn">
+                                    <a href="">
+                                        시작하기
+                                        <span></span>
+                                    </a>
+                                </div>
                             </div>
                         </section>
                         <section class="contents_sec">
-                            <img src="images/RE2OfW4.webp">
-                            <h3>Xbox One S</h3>
-                            <p>생산적이고 현대적이며 혁신적인 IDE인 Visual Studio 2019를 다운로드하세요.</p>
-                            <div class="section_btn">
-                                <a href="">
-                                    지금 다운로드하기
-                                    <span></span>
-                                </a>
+                            <div>
+                                <img src="images/RE2OfW4.webp">
+                                <h3>Xbox One S</h3>
+                                <p>생산적이고 현대적이며 혁신적인 IDE인 Visual Studio 2019를 다운로드하세요.</p>
+                                <div class="section_btn">
+                                    <a href="">
+                                        지금 다운로드하기
+                                        <span></span>
+                                    </a>
+                                </div>
                             </div>
                         </section>
                     </div>
