--- a/Microsoft/index.html
+++ b/Microsoft/index.html
@@ -239,9 +239,11 @@
                     <div class="store_contents_inner">
                         <h1>Microsoft 스토어</h1>
                         <p>집과 학교, 직장 및 여가 생활에 필요한 제품을 확인 하세요.</p>
-                        <div class="sotre_buy_btn clear">
-                            <a href="">구매하기</a>
-                            <span class="arrow"></span>
+                        <div class="sotre_buy_btn">
+                            <a href="">
+                                <span>구매하기</span>
+                            </a>
+                            <!-- <span class="arrow clear"></span> -->
                         </div>
                     </div>
                 </div>
@@ -326,7 +328,7 @@
         <div class="footer_inner">
             <nav class="footer_nav">
                 <div class="footer_nav_inner">
-                    <ul class="site_map">
+                    <ul class="site_map open" >
                         <li>
                             <h3>새로운 기능</h3>
                             <a href="">
